# sdk-rust

./: Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yaml  publish.yaml
docs/: architecture.md
examples/: coingecko_oracle.rs  http_client.rs  httpbin.rs  ipfs_api.rs  llm-mcp.rs  llm.rs  rpc.rs  web-scrape.rs
src/: cgi.rs  cgi_host.rs  error.rs  http.rs  http_host.rs  lib.rs  llm.rs  memory.rs  memory_host.rs  rpc.rs  socket.rs  socket_host.rs
src/bless_crawl/: html_to_markdown.rs  html_transform.rs  mod.rs
