[package]
name = "blockless-sdk"
version = "0.2.0"
authors = ["Join.G", "Zeeshan.S"]
description = "blockless runtime sdk"
keywords = ["blockless", "sdk"]
readme = "README.md"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/blocklessnetwork/sdk-rust"

[dependencies]
htmd = { version = "0.2.2", default-features = false }
json = { version = "0.12", default-features = false }
kuchikiki = { version = "0.8", default-features = false }
regex = { version = "1.11.1", default-features = false, features = ["unicode-case"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
url = { version = "2.5", default-features = false }

[features]
default = ["serde"]
serde = ["dep:serde"]
mock-ffi = []
