[package]
name = "blockless-sdk"
version = "0.2.2"
authors = ["Join.G", "Zeeshan.S"]
description = "blockless runtime sdk"
keywords = ["blockless", "sdk"]
readme = "README.md"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/blocklessnetwork/sdk-rust"

[dependencies]
base64 = { version = "0.13", default-features = false, features = ["alloc"], optional = true }
htmd = { version = "0.2.2", default-features = false, optional = true }
json = { version = "0.12", default-features = false }
kuchikiki = { version = "0.8", default-features = false, optional = true }
regex = { version = "1.11.1", default-features = false, features = ["unicode-case"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
url = { version = "2.5", default-features = false }

[features]
default = [
  "http",
  "llm",
  "bless-crawl",
  "cgi",
  "socket",
  "memory",
  "rpc",
]
mock-ffi = []
http = ["rpc", "dep:serde"]
llm = ["dep:serde"]
bless-crawl = ["http", "dep:base64", "dep:htmd", "dep:kuchikiki", "dep:regex", "dep:serde"]
cgi = []
socket = []
memory = []
rpc = ["dep:serde"]
